adjust win installer, code clean up